Bug 156670 - No context menu option to set alternative text or decorative status of Shapes in Writer
Summary: No context menu option to set alternative text or decorative status of Shapes...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.4.2 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0 target:7.6.1
Keywords: accessibility
Depends on:
Blocks: Shapes Accessibility-Check
  Show dependency treegraph
 
Reported: 2023-08-08 12:04 UTC by devseppala
Modified: 2023-11-08 10:32 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description devseppala 2023-08-08 12:04:24 UTC
Since LO 7.5.4 Shapes can be assigned decorative/alternative text, but there is no GUI option available for it in LO Writer. In Impress, Shapes have "description.." context menu for this purpose.

LO 7.6 will have "Accessibility check" FIX link for setting this, but there should also be a normal GUI setting available through the context menu for this. Also, the FIX link does not provide a decorative setting, only alternative text.

This applies also to Shape groups!

Steps to reproduce:

Create a new Writer document and add a Basic Shape to it from the toolbar. Right click the inserted Shape and there is no option available to set it decorative or to set the alternative text.


Related issues:

BUG #57423
	
PDF: "Description" and "Title/Text Alternative" is only PDF-exported for Images, but not for Shapes, Formula, Frames, and OLE Object

BUG #155504
	
Missing "Go to" and "Fix" buttons for shapes without alt/desc text
Comment 1 devseppala 2023-08-08 12:08:43 UTC
Error in the first line of the bug repport, it should say:

Since LO 7.4.4 Shapes can be assigned decorative/alternative text ...
Comment 2 Stéphane Guillou (stragu) 2023-08-10 08:39:27 UTC
I changed the summary slightly, as we already have "Format > Description" in the menus to add alternative text.

Michael, regarding the decorative flag, any insights on how that would work with shapes?
If it is possible to make shapes decorative, I don't think the decorative flag should be available straight form the context menu. But I'm unsure what the equivalent of images' "Properties > Options tab" would be.
Comment 3 Michael Stahl 2023-08-10 08:45:19 UTC
it's in Format->Description, since commit 8ee3175c0278d18b08665cac725ef3500e59f222

funnily, this dialog *also* exists for writer's image/ole/text frames, which (if you look at the commit) took more changes to make work than for the shapes...

i think the UI for shape properties could be improved, but don't have any opinions on how exactly.
Comment 4 Samuel Mehrbrodt 2023-08-10 09:00:02 UTC
Right, so two fixes needed:
* The Fix button should open the Format->Description dialog
* The Description dialog should also be available from the context menu for shapes.
Comment 5 devseppala 2023-08-14 09:03:58 UTC
Sorry for the wrong info, did not realize that there is that  "Format > Description" menu. I was so accustomed to the "Properties > Options" context menu.

If you decide to fix the missing context menu by adding the "Format > Description" shortcut to the context menu, then I would add one more thing to the fix list. Add the "decorative" flag to the "Format > Description" dialog. 

In my opinion these are highly interrelated options and should always be presented together. I can say that Acrobat offers to flag Shapes as decorative and I have a need to mark them as decorative. Currently, if someone uses the "Format > Description" for images, they do not know that it is possible to flag images explicitly decorative, which is avalable from "Properties > Options" context menu. While it is possible to simulate the "decorative" flag by inserting just a blank space in the alternative text field, I think it would be preferable to flag them explicitly decorative.
Comment 6 Commit Notification 2023-08-15 06:57:05 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e027ef6c0534b7ce50dc5f8b74e27ce85b9eb97b

tdf#156670 - A11Y - Open the Format->Description dialog with the fix button

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Samuel Mehrbrodt 2023-08-15 07:29:37 UTC
(In reply to devseppala from comment #5)
> If you decide to fix the missing context menu by adding the "Format >
> Description" shortcut to the context menu, then I would add one more thing
> to the fix list. Add the "decorative" flag to the "Format > Description"
> dialog. 

That checkbox is already there.
Comment 8 devseppala 2023-08-15 09:00:49 UTC
(In reply to Samuel Mehrbrodt (allotropia) from comment #7) 
> That checkbox is already there.

Sorry again, I was on LO 7.5.5 and in that version it is missing. Checked the unreleased LO 7.6.0.2 and there I found it.
Comment 9 Commit Notification 2023-08-16 09:22:05 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/f3f5ad60fbd75f70e7bb5b8bb5444098ff2581eb

tdf#156670 - A11Y - Open the Format->Description dialog with the fix button

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 devseppala 2023-08-16 12:40:18 UTC
(In reply to Samuel Mehrbrodt (allotropia) from comment #4)
> Right, so two fixes needed:
> * The Fix button should open the Format->Description dialog
> * The Description dialog should also be available from the context menu for
> shapes.

This issue was marked 'RESOLVED FIXED', but isn't the number two still on the TODO list, or have I misunderstood something once again.
Comment 11 Balázs Varga 2023-08-16 14:30:04 UTC
Ohh yes, maybe I forget about it. :( In that case if it was just the first fix/issue we can reopen.
Comment 12 devseppala 2023-09-25 09:18:50 UTC
I tested LO 7.6.1 and now the accessibility check fix link correctly opens the Format->Description dialog, when Shapes are missing alternative text.

However, Shapes are still missing "Format > Description" link in the context menu.
Comment 13 Commit Notification 2023-11-02 08:28:02 UTC
Gabor Kelemen committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6831dffe05fad2bcf7a1db1974bd0be11e6dbff9

tdf#156670 Add 'Alt text' command to shapes popup menu

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 devseppala 2023-11-08 10:20:07 UTC
I tested LO 24.2 daily build and shapes had the "Alt text" command in the context menu. Hopefully this fix will come also to LO 7.6 series. Thank you for fixing this.