tdf#156670 - A11Y - Open the Format->Description dialog with the fix button

The Fix button will open the Format->Description dialog in case of shapes,
textBox, graphic, OLE objects.

(Remove Description text from (AccessibilityTests1.odt) the shape for proper
testing of no_alt_text.)

Change-Id: I6678fa44a0a47bab60558f770cc709012f02d83b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155653
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>